[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/Slug/pl_tail1_w.png" type="Texture" id=1]
[ext_resource path="res://assets/Slug/pl_tail2_w.png" type="Texture" id=2]
[ext_resource path="res://scripts/player_scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://scripts/player_scripts/Head.gd" type="Script" id=4]
[ext_resource path="res://scripts/player_scripts/BaseMove.gd" type="Script" id=5]
[ext_resource path="res://scripts/player_scripts/body.gd" type="Script" id=6]
[ext_resource path="res://assets/Slug/pl_head_w.png" type="Texture" id=7]
[ext_resource path="res://assets/Slug/pl_body_w.png" type="Texture" id=8]
[ext_resource path="res://scenes/player/attachments/GunArm.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/player/attachments/MeleeAttachment.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/player/attachments/Eye.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/player/DamBox.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/player/attachments/leg.tscn" type="PackedScene" id=13]
[ext_resource path="res://scripts/player_scripts/BodySlot.gd" type="Script" id=14]
[ext_resource path="res://scripts/player_scripts/ArmSlot.gd" type="Script" id=15]

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.99998
height = 3.99995

[sub_resource type="CapsuleShape2D" id=3]
radius = 14.0

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="CapsuleShape2D" id=5]
radius = 16.1538
height = 13.0376

[sub_resource type="CircleShape2D" id=1]

[node name="PlayerCharacter" type="Node2D"]
modulate = Color( 0.156863, 0.47451, 0.203922, 1 )
script = ExtResource( 3 )

[node name="tail2" type="KinematicBody2D" parent="."]
position = Vector2( 158, 80 )
rotation = 1.5708
z_index = 1

[node name="Sprite" type="Sprite" parent="tail2"]
position = Vector2( 1.22826, -0.174042 )
rotation = 1.5708
scale = Vector2( 1.08634, 0.829191 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="tail2"]
position = Vector2( 1, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="tail1" type="KinematicBody2D" parent="."]
position = Vector2( 158, 108 )
rotation = 1.5708

[node name="Sprite" type="Sprite" parent="tail1"]
position = Vector2( 6.05264, 0 )
rotation = 1.5708
scale = Vector2( 0.95, 1 )
z_index = -1
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="tail1"]
position = Vector2( 8, -3.05176e-05 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Eye" parent="tail1" instance=ExtResource( 11 )]
position = Vector2( 0, -3 )
scale = Vector2( 0.4, 0.4 )
z_index = 18

[node name="body" type="KinematicBody2D" parent="."]
position = Vector2( 158, 122 )
rotation = 1.5708
scale = Vector2( 1.2, 1.3 )
collision_layer = 4
collision_mask = 0
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="body"]
position = Vector2( 18, 0.0993214 )
rotation = 1.5708
scale = Vector2( 0.839758, 1 )
z_index = -2
texture = ExtResource( 8 )

[node name="bSlot 0" type="Position2D" parent="body"]
position = Vector2( 13.3333, -3.07701 )
rotation = 4.71239
script = ExtResource( 14 )

[node name="Area2D" type="Area2D" parent="body/bSlot 0"]
rotation = -4.54747e-13
scale = Vector2( 0.5, 0.5 )
collision_layer = 513
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="body/bSlot 0/Area2D"]
shape = SubResource( 4 )

[node name="Node2D" parent="body/bSlot 0" instance=ExtResource( 13 )]

[node name="bSlot 1" type="Position2D" parent="body"]
position = Vector2( 13.3333, 3.07683 )
rotation = 1.5708
script = ExtResource( 14 )
slot_num = 1

[node name="Area2D" type="Area2D" parent="body/bSlot 1"]
rotation = -4.54747e-13
scale = Vector2( 0.5, 0.5 )
collision_layer = 513
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="body/bSlot 1/Area2D"]
shape = SubResource( 4 )

[node name="Node2D" parent="body/bSlot 1" instance=ExtResource( 13 )]

[node name="bSlot 2" type="Position2D" parent="body"]
position = Vector2( 2.56407, -3.07698 )
rotation = 4.71239
script = ExtResource( 14 )
slot_num = 2

[node name="Area2D" type="Area2D" parent="body/bSlot 2"]
rotation = -4.54747e-13
scale = Vector2( 0.5, 0.5 )
collision_layer = 513
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="body/bSlot 2/Area2D"]
shape = SubResource( 4 )

[node name="Node2D" parent="body/bSlot 2" instance=ExtResource( 13 )]

[node name="bSlot 3" type="Position2D" parent="body"]
position = Vector2( 2.56406, 3.07688 )
rotation = 1.5708
script = ExtResource( 14 )
slot_num = 3

[node name="Area2D" type="Area2D" parent="body/bSlot 3"]
rotation = -4.54747e-13
scale = Vector2( 0.5, 0.5 )
collision_layer = 513
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="body/bSlot 3/Area2D"]
shape = SubResource( 4 )

[node name="Node2D" parent="body/bSlot 3" instance=ExtResource( 13 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
position = Vector2( 9.92264, -3.05176e-05 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="PlayerPos" type="KinematicBody2D" parent="." groups=["player"]]
position = Vector2( 160, 162 )
collision_layer = 256
script = ExtResource( 5 )

[node name="Head" type="KinematicBody2D" parent="PlayerPos"]
z_index = -1
collision_layer = 257
collision_mask = 257
script = ExtResource( 4 )

[node name="Eye" parent="PlayerPos/Head" instance=ExtResource( 11 )]
position = Vector2( 3, -11 )
scale = Vector2( 0.4, 0.4 )
z_index = 18

[node name="Sprite" type="Sprite" parent="PlayerPos/Head"]
rotation = 1.5708
z_index = 15
texture = ExtResource( 7 )

[node name="rightArmSlot" type="Position2D" parent="PlayerPos/Head"]
position = Vector2( -7, 21 )
z_index = 4
script = ExtResource( 15 )

[node name="Area2D" type="Area2D" parent="PlayerPos/Head/rightArmSlot"]
rotation = -4.54747e-13
scale = Vector2( 0.5, 0.5 )
collision_layer = 513
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerPos/Head/rightArmSlot/Area2D"]
shape = SubResource( 4 )

[node name="GunAttachment" parent="PlayerPos/Head/rightArmSlot" instance=ExtResource( 9 )]
left = false

[node name="leftArmSlot" type="Position2D" parent="PlayerPos/Head"]
position = Vector2( -7, -22 )
z_index = 4
script = ExtResource( 15 )
left = true

[node name="Area2D" type="Area2D" parent="PlayerPos/Head/leftArmSlot"]
rotation = -4.54747e-13
scale = Vector2( 0.5, 0.5 )
collision_layer = 513
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerPos/Head/leftArmSlot/Area2D"]
shape = SubResource( 4 )

[node name="MeleeAttachment" parent="PlayerPos/Head/leftArmSlot" instance=ExtResource( 10 )]

[node name="HeadCol" type="CollisionShape2D" parent="PlayerPos"]
scale = Vector2( 2.4, 2.4 )
z_index = 15
shape = SubResource( 1 )

[node name="healthDisplay" parent="PlayerPos" instance=ExtResource( 12 )]
visible = false
scale = Vector2( 1.285, 1.39 )
healthbar_height = 15
healthbar_scale = 2
